# GyroFlowLive

./: .gitignore  Cargo.toml  Justfile  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
Materials/: gyro.gcsv  main.py  server.py  test_client.py
Materials/LiveGyroFlow/: Cargo.toml
Materials/LiveGyroGen/: Cargo.toml
_deployment/android/: AndroidManifest.xml
_deployment/ios/: PrivacyInfo.xcprivacy
_deployment/windows/: AppxManifest.xml  Gyroflow_with_console.bat
_scripts/: android.just  ios.just  macos.just
resources/icons/: index.theme
resources/translations/: _extract_crowdin.bat
src/: cli.rs  controller.rs  gyroflow.rs  nle_plugins.rs  resources.rs  resources_qml.rs  ui_live_reload.cpp  util.rs
src/core/: Cargo.toml  build.rs  camera_identifier.rs  filtering.rs  gyro_export.rs  keyframes.rs  lens_profile.rs  lens_profile_database.rs  lib.rs  settings.rs  stabilization_params.rs  stmap.rs  stmap_live.rs  util.rs
src/external_sdk/: braw.rs  ffmpeg_gpl.rs  mod.rs  r3d.rs
src/live/: Cargo.toml
src/live/src/: fplay.rs  gyro_live_source  live_pix_fmt.rs  main.rs  render_live.rs  render_map_kind.rs
src/qt_gpu/: qrhi_undistort.cpp  qrhi_undistort.rs  texture.vert  undistort.frag
src/rendering/: audio_resampler.rs  ffmpeg_android.rs  ffmpeg_audio.rs  ffmpeg_hw.rs  ffmpeg_processor.rs  ffmpeg_video.rs  ffmpeg_video_converter.rs  mdk_processor.rs  mod.rs  render_queue.rs  video_processor.rs  zero_copy.rs
src/ui/: App.qml  CalibrationTarget.qml  Calibrator.qml  RenderQueue.qml  SettingsSelector.qml  Shortcuts.qml  Statistics.qml  (+4 more)
(+179 files in other folders)
